[gd_scene load_steps=13 format=3 uid="uid://18p4x6egilxc"]

[ext_resource type="Script" path="res://scripts/main_script.gd" id="1_idi3s"]
[ext_resource type="PackedScene" uid="uid://cuc3wniwp88mv" path="res://nodes/cheese.tscn" id="2_7i27o"]
[ext_resource type="PackedScene" uid="uid://cagcnvjsihqp4" path="res://scenes/hud_scene.tscn" id="2_qshda"]
[ext_resource type="PackedScene" uid="uid://cviicny3d63dk" path="res://scenes/goon_manager.tscn" id="3_grn83"]
[ext_resource type="PackedScene" uid="uid://cxvlnyvc2y1s4" path="res://nodes/player_mouse.tscn" id="3_s77hs"]
[ext_resource type="AudioStream" uid="uid://bbhfnpcvcb5rw" path="res://assets/audio/cheeseGet001.wav" id="6_j2nvs"]
[ext_resource type="AudioStream" uid="uid://cb5cwc0x2iu22" path="res://assets/audio/cheeseGet002.wav" id="7_r6bxt"]
[ext_resource type="AudioStream" uid="uid://b4rbav01lo6im" path="res://assets/audio/cheeseGet003.wav" id="8_g16e6"]
[ext_resource type="AudioStream" uid="uid://c24f6rfrx3777" path="res://assets/audio/countdown.wav" id="9_ayf73"]
[ext_resource type="AudioStream" uid="uid://bt160fr1sny54" path="res://assets/audio/go.wav" id="10_ketax"]
[ext_resource type="AudioStream" uid="uid://cjdy28amd1xl" path="res://assets/audio/sleepyTone.wav" id="11_vf0ek"]
[ext_resource type="AudioStream" uid="uid://diku1lb4hmcwt" path="res://assets/audio/tada.wav" id="12_xqyru"]

[node name="Main" type="Node"]
script = ExtResource("1_idi3s")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.27451, 0.678431, 0.435294, 1)

[node name="SpawnArea" type="ReferenceRect" parent="."]
offset_left = 40.0
offset_top = 88.0
offset_right = 1112.0
offset_bottom = 608.0

[node name="PlayArea" type="ReferenceRect" parent="."]
offset_top = 72.0
offset_right = 1152.0
offset_bottom = 648.0

[node name="PerSecondTimer" type="Timer" parent="."]

[node name="LightCheeseSpawnTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="LightCheeseSpawnTimer2" type="Timer" parent="."]
wait_time = 5.0

[node name="HUD" parent="." instance=ExtResource("2_qshda")]

[node name="GoonManager" parent="." instance=ExtResource("3_grn83")]

[node name="CheeseCursor" parent="." instance=ExtResource("2_7i27o")]

[node name="PlayerMouse" parent="." instance=ExtResource("3_s77hs")]

[node name="CheeseCollectSound001" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_j2nvs")

[node name="CheeseCollectSound002" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_r6bxt")

[node name="CheeseCollectSound003" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_g16e6")

[node name="CountdownSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_ayf73")

[node name="GoSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_ketax")

[node name="SleepySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_vf0ek")

[node name="TadaSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_xqyru")

[connection signal="timeout" from="PerSecondTimer" to="." method="_on_per_second_timer_timeout"]
[connection signal="timeout" from="LightCheeseSpawnTimer" to="." method="_on_light_cheese_spawn_timer_timeout"]
[connection signal="timeout" from="LightCheeseSpawnTimer2" to="." method="_on_light_cheese_spawn_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="toggle_sound" from="HUD" to="." method="_on_hud_toggle_sound"]
[connection signal="cheese_eaten" from="CheeseCursor" to="." method="_on_cheese_cursor_cheese_eaten"]
[connection signal="cheese_eaten" from="CheeseCursor" to="PlayerMouse" method="_on_cheese_cursor_cheese_eaten"]
[connection signal="mouse_goes_to_sleep" from="PlayerMouse" to="." method="_on_player_mouse_mouse_goes_to_sleep"]
[connection signal="mouse_is_knocked_out" from="PlayerMouse" to="." method="_on_player_mouse_mouse_is_knocked_out"]
